# observer

./: .gitignore  README.md  pyproject.toml
observer/: observer.py
observer/domain/: metrics.py  schema.py  schema_util.py  structure.py  vocab_dictionary.py
observer/repo/: __init__.py  config.py  db.py  observer.py
observer/util/: error.py  logger.py  monad.py  validate.py
tests/: test_config.py  test_observer.py  test_observer_persistence.py
tests/shared/: __init__.py  db_setup.py  spark_test_session.py
